--- a/.github/workflows/main_icons-search.yml
+++ b/.github/workflows/main_icons-search.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Zip artifact for deployment
         working-directory: frontend
-        run: zip release.zip ./* -r
+        run: zip -r release.zip . -x "node_modules/*" ".git/*" ".next/cache/*" # Exclude unnecessary files
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
