--- a/.github/workflows/main_icon-search.yml
+++ b/.github/workflows/main_icon-search.yml
@@ -55,9 +55,6 @@ jobs:
         with:
           name: node-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -71,4 +68,4 @@ jobs:
         with:
           app-name: "icon-search"
           slot-name: "Production"
-          package: .
+          package: release.zip
