--- a/.github/workflows/main_icon-search.yml
+++ b/.github/workflows/main_icon-search.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Zip artifact for deployment
         working-directory: frontend
-        run: zip -r release.zip . -x "node_modules/*" ".git/*" ".next/cache/*" # Exclude unnecessary files
+        run: zip -r release.zip . -x ".git/*" ".next/cache/*" # Exclude unnecessary files
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
